--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
                         <p class="paragraph">Product Designer</p>
                    </div>
                    <div>
-                       <img src="./css/images-svg/instagram.svg" alt="">
-                       <img src="" alt="">
-                       <img src="" alt="">
-                       <img src="" alt="">
+                       <img src="./css/images-svg/instagram.svg" alt="" width="20" class="social-network">
+                       <img src="./css/images-svg/Twitter.svg" alt="" width="20" class="social-network">
+                       <img src="./css/images-svg/Facebook.svg" alt="" width="20" height="20" class="social-network">
+                       <img src="./css/images-svg/linkedin.svg" alt="" width="20" class="social-network">
                    </div>
                 </li>
                 
