--- a/index.html
+++ b/index.html
@@ -20,24 +20,21 @@
 <!-- Шапка -->
 
     <header class="header nopadding">
-        <div class="container">
-            <div class="header-inner">
-                <nav class="main-nav">
-                    <a href="" class="logo"><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a>
-                    <ul class="site-nav list">
-                        <li class="item"><a href="./index.html" class="link current">Студия</a></li>
-                        <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
-                        <li class="item"><a href="" class="link">Контакты</a></li>
-                    </ul>
-                </nav>
-                <ul class="cont-nav list">
-                    <li class="item"><a href="info@devstudio.com" class="link">info@devstudio.com</a></li>
-                    <li class="item"><a href="380961111111" class="link">+38 096 111 11 11</a></li>
+        <div class="container header-inner">
+            <nav class="main-nav">
+                <a href="" class="logo"><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a>
+                <ul class="site-nav list">
+                    <li class="item"><a href="./index.html" class="link current">Студия</a></li>
+                    <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+                    <li class="item"><a href="" class="link">Контакты</a></li>
                 </ul>
-            </div>
+            </nav>
+            <ul class="cont-nav list">
+                <li class="item"><a href="info@devstudio.com" class="link">info@devstudio.com</a></li>
+                <li class="item"><a href="380961111111" class="link">+38 096 111 11 11</a></li>
+            </ul>
         </div>
     </header>
- 
     <main>
         <!-- Герой -->
         <section class="hero">
