--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                     <svg class="item-icon envelope">
                         <use href="images/symbol-defs.svg#icon-envelope"></use>
                     </svg>
-                    info@devstudio.com</a></li>
+                    info@devstudio.com</a>
+                </li>
     
                 <li class="item"><a href="380961111111" class="link">
                     <svg class="item-icon tel">
@@ -353,6 +354,39 @@
         <li><a href="+380961111111" class="adress-link" >+38 096 111 11 11</a></li>
     </ul>
 </address>
+</div>
+<div class="container">
+    <h2 class="join">Присоединяйтесь</h2>
+    <ul class="social-links">
+                        <li>
+                            <a href="https://www.instagram.com" class="link footer-bgc" aria-label="Instagram">
+                                <svg class="link-icon-footer" widht="20" height="20">
+                                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://twitter.com/?lang=ru" class="link footer-bgc" aria-label="Twitter">
+                                <svg class="link-icon-footer" widht="20" height="20">
+                                    <use href="./images/symbol-defs.svg#icon-Twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.facebook.com" class="link footer-bgc" aria-label="Facebook">
+                                <svg class="link-icon-footer" widht="20" height="20">
+                                    <use href="./images/symbol-defs.svg#icon-Facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.instagram.com" class="link footer-bgc" aria-label="Linkedin">
+                                <svg class="link-icon-footer" widht="20" height="20">
+                                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
 </div>
     </footer>
     
