--- a/index.html
+++ b/index.html
@@ -355,9 +355,9 @@
     </ul>
 </address>
 </div>
-<div class="container">
+<div class="footer-links container">
     <h2 class="join">Присоединяйтесь</h2>
-    <ul class="social-links">
+    <ul class="social-links footer-icon">
                         <li>
                             <a href="https://www.instagram.com" class="link footer-bgc" aria-label="Instagram">
                                 <svg class="link-icon-footer" widht="20" height="20">
