--- a/index.html
+++ b/index.html
@@ -354,9 +354,8 @@
         <li><a href="+380961111111" class="adress-link" >+38 096 111 11 11</a></li>
     </ul>
 </address>
-</div>
 
-<div class="footer-links container">
+<div class="footer-links">
     <h2 class="join">Присоединяйтесь</h2>
     <ul class="social-links footer-icon">
                         <li>
@@ -388,6 +387,7 @@
                             </a>
                         </li>
                     </ul>
+</div>
 </div>
     </footer>
     
