--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
 
    
     <footer class="footer">
-        <div class="container">
+        <div class="container footer-distance">
         <a href="" class="logo"><span class="logo-web">Web</span><span class="logo-studio-two">Studio</span></a>
          
 <address class="add">
