--- a/index.html
+++ b/index.html
@@ -345,6 +345,7 @@
    
     <footer class="footer">
         <div class="container footer-distance">
+        <div>
         <a href="" class="logo"><span class="logo-web">Web</span><span class="logo-studio-two">Studio</span></a>
          
 <address class="add">
@@ -354,6 +355,7 @@
         <li><a href="+380961111111" class="adress-link" >+38 096 111 11 11</a></li>
     </ul>
 </address>
+</div>
 
 <div class="footer-links">
     <h2 class="join">Присоединяйтесь</h2>
