--- a/index.html
+++ b/index.html
@@ -116,13 +116,22 @@
             <ul class="images">
                 <li class="item images">
                     <img src="./images/img-one.jpg" alt="example" width="370">
-
+                 <div class="position">
+                     <p class="position-title">Десктопные приложения</p>
+                 </div>
                 </li>
                 <li class="item images">
                     <img src="./images/img-two.jpg" alt="example" width="370">
+                    <div class="position">
+                     <p class="position-title">Мобильные приложения</p>
+                 </div>
                 </li>
+
                 <li class="item images">
                     <img src="./images/img-three.jpg" alt="example" width="370">
+                    <div class="position">
+                     <p class="position-title">Дизайнерские решения</p>
+                 </div>
                 </li>
             </ul>
 
